<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="textname">Enter Your Details</string>
	<string name="buttonname">Logout</string>
	<string name="username">Username</string>
	<string name="pass">Password</string>
	<string name="cannot_download">Cannot Download Your File</string>
	<string name="download_pending">Download is Pending</string>
     <string name="site_url">http://172.16.93.85:8000/minor/</string>
     <string name="Login">Login</string>
		<string name="new1">New to cloud? Register here</string>
		<string name="first">Firstname</string>
		<string name="last">Lastname</string>
		<string name="Register">Register New Account</string>
		<string name="already">Already has account! Login here</string>
		<string name="email">Email</string>
		<string name="reload">MyDrive</string>
		<string name="help">Help</string>

</resources>
