<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  
        <!--  Header  Starts-->
        <!--  Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->
 
        <!-- Registration Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

          <!-- Full Name Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/username"
              android:textColor="#000000" />

          <EditText android:id="@+id/reg_Username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:inputType="text"/>

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/pass"
              android:textColor="#000000" />

          <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:inputType="textPassword"/>

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/first"
              android:textColor="#000000" />

          <EditText android:id="@+id/reg_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="5dip"
                android:inputType="text"/>

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/last"
              android:textColor="#000000" />

          <EditText android:id="@+id/reg_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="5dip"
          	android:inputType="text"/>
          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/email"
              android:textColor="#000000" />

          <EditText android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="10dip"
          		android:inputType="textEmailAddress"/>"
          <!-- Password Label -->
          
          <!-- Register Button -->
          <Button android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Register"/>
          <!-- Link to Login Screen -->
          <TextView android:id="@+id/linktologin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:text="@string/already"
                android:gravity="center"
               
                android:textColor="#025f7c"/>
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  
</ScrollView>